Select element - in work

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,4 +1,4 @@
-<mat-list role="list">
+<mat-list role="list" [ngClass]="{ selected: isScrolled}">
   <mat-list-item role="listitem" *ngFor="let item of categories; let i = index" [id]="'bar-' + i">
     {{item}}
   </mat-list-item>
